--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: budget-app
-    databaseName: budget_app_rku0
-    user: budget_app_rku0_user
+  - name: budget_app
+    databaseName: budget_app_d16l
+    user: budget_app_d16l_user
 
 services:
   - type: web
-    name: budget-app
+    name: budget_app
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: budget-app
+          name: budget_app_d16l
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
