--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
-  - name: budget_app
-    databaseName: budget_app_d16l
-    user: budget_app_d16l_user
+  - name: kay
+    databaseName: kay
+    user: kay_user
 
 services:
   - type: web
@@ -12,7 +12,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: budget_app_d16l
+          name: kay
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
