--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,17 @@
 databases:
-  - name: kay
-    databaseName: kay
-    user: kay_user
+  - name: musoki
+    databaseName: kay_and3kay
+    user: kay_and3_user
 services:
   - type: web
-    name: budget_app
+    name: budgetapp
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: kay
+          name: musoki
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
