--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,18 @@
 databases:
-  - name: musoki
-    databaseName: kay_and3kay
-    user: kay_and3_user
+  - name: habert
+    databaseName: habert
+    user: habert_user
+
 services:
   - type: web
-    name: budgetapp
+    name: app
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: musoki
+          name: habert
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
